<resources>
    <string name="app_name">MusicEvents</string>
    <string name="action_settings">Settings</string>

    <string name="enter_zip_text">Enter Zip</string>
    <string name="music_events_title">MusicEvents</string>
    <string name="title_activity_event_listing">EventListing</string>
    <string name="enter_zip_button">Search</string>
    <string name="event_title">Event Title</string>
    <string name="hint_text">Enter Zip</string>

    <string name="artist_title">Artist</string>
    <string name="event_city">City</string>
    <string name="event_zip">Zip</string>
    <string name="event_venue">Venue</string>
    <string name="event_venue_address">Address</string>
    <string name="event_get_tickets">Get Tickets!</string>
</resources>
